%% NB: The date (yyyy-mm-dd) is the "Packaged:" date in ../DESCRIPTION


%\section{Version 0.9.7 (???)}{
% \subsection{Changes}{
%  \itemize{
%   \item TO DO: finish poisson2sampleDiff 
%         (see /PUBLISHED/2015 Fay Proschan Brittain/R/poisson2sampleDiff)
%         the meldCD function there is the same that is here.
%  }
% } 
%}



\section{Version 0.9.8 (2021-09-15)}{
 \subsection{Changes}{
  \itemize{
   \item Fixed bug in simulateSS function (see comment inside estNpower function within simulateSS).
  }
 } 
}



\section{Version 0.9.7 (2021-01-25)}{
 \subsection{Changes}{
  \itemize{
   \item Added simulateSS function.
  }
 } 
}



\section{Version 0.9.6 (2020-07-03)}{
 \subsection{Changes}{
  \itemize{
   \item Added unconditional difference option for the statistic for the sign test. This calls ncnemarExactDP, that is why the package now requires exact2x2 (>=1.6.4).
  }
 } 
}




\section{Version 0.9.5.1 (2020-06-22)}{
 \subsection{Changes}{
  \itemize{
   \item added utol argument to meldCD.
   \item Changed wmwTest so that it gives a warning if the uniroot function may fail for method='exact.mc'. See Note section on the man page. 
  }
 } 
}




\section{Version 0.9.4 (2018-09-14)}{
 \subsection{Changes}{
  \itemize{
   \item Added meldtTest and meldCD functions to do two-sample tests by melding.
   \item Added tukeyWelsch function to do multiplicity adjusted pairwise tests from k-samples
   \item Added anovaOneWay, to output an ICC or other estimate, also allow var.eqaul=FALSE using the Brown-Forsythe method.
   \item Added ama1c1cpg data set.
   \item Fixed wmwTest when exact and there are tied values and value is most extreme. 
   For example,  wmwTest(c(1,3),c(3,4))  previously had given an error for calculating 
   the confidence interval. 
   \item use match.arg with method in wmwTest, so that method='asy' will work for method='asymptotic'
   \item updated wmwTest reference
   \item added output to bfTest so it outputs the R statistic.
  }
 } 
}

