@@ -5,6 +5,7 @@ export(cvTest,quantileTest,signTest,var1Test,wspoissonTest,wsrTest,
        medianTest, bfTest, pbf, qbf, bfControl, abcnonHtest, 
        wmwTest, methodRuleWMW, wmwControl, latentTransform, Vpo, 
        meldtTest, anovaOneWay, tukeyWelsch, meldCD, metaNorm, prevSeSp,
+       WprevSeSp,
        simulateSS
        )
 
@@ -13,6 +14,7 @@ import(exact2x2, exactci, bpcp, ssanv, coin)
 importFrom("stats", "approx", "runif","isoreg")
 importFrom(stats, sd,var, 
     pt, 
+    rbeta,
     pbinom, rbinom, 
     rgamma, qgamma, pgamma,
     pnorm,qnorm,
